<resources>
    <string name="app_name">Frutiapp</string>
    <string name="et_nombre">¿Como es tu nombre?</string>
    <string name="boton">Jugar</string>

    <string name="et_vidas">Manzanas</string>
    <string name="jugador_nombre">Jugador: </string>
    <string name="total_score">Score: 0</string>
    <string name="botonSumar">Comprobar</string>
    <string name="et_respuesta">Respuesta</string>
</resources>