<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".MainActivity2_Nivel3">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:text="@string/total_score"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_Manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:text="@string/et_vidas"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageView_numUno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/resta" />

    <ImageView
        android:id="@+id/imageView_numDos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <EditText
        android:id="@+id/editTextNumber_resultado"
        android:layout_width="100dp"
        android:layout_height="040dp"
        android:layout_below="@+id/imageView_signo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="035dp"
        android:layout_below="@+id/imageView_numDos"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/fondoboton"
        android:onClick="Comparar"
        android:text="@string/botonSumar"
        android:textColor="@android:color/background_light" />
</RelativeLayout>